[package]
name = "sphinx-recursion-compiler"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }
sphinx-recursion-core = { path = "../core" }
sphinx-core = { path = "../../core" }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sphinx-recursion-derive = { path = "../derive" }
p3-bn254-fr = { workspace = true }
p3-baby-bear = { workspace = true }
p3-poseidon2 = { workspace = true }
backtrace = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
p3-challenger = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
rand = { workspace = true }

[features]
default = ["avx512"]
avx512 = ["p3-baby-bear/nightly-features"]
