[package]
edition = "2021"
name = "wp1-recursion-core"
version = "0.1.0"

[dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
wp1-derive = { path = "../../derive" }
tracing = "0.1.40"
wp1-core = { path = "../../core" }
hashbrown = "0.14.3"
itertools = "0.12.1"

[features]
default = ["avx512"]
avx512 = ["p3-baby-bear/nightly-features"]