[package]
name = "sphinx-recursion-core"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
p3-air = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-util = { workspace = true }
sphinx-derive = { path = "../../derive" }
sphinx-primitives = { path = "../../primitives" }
tracing = { workspace = true }
sphinx-core = { path = "../../core" }
hashbrown = { workspace = true }
itertools = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-challenger = { workspace = true }
p3-fri = { workspace = true }
zkhash = { workspace = true }
ff = { workspace = true, features = ["derive", "derive_bits"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_with = { workspace = true }
backtrace = { workspace = true, features = ["serde"] }
arrayref = { workspace = true }
static_assertions = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
