[package]
name = "wp1-recursion-gnark-ffi"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-field = { workspace = true }
wp1-recursion-compiler = { path = "../compiler" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
rand = { workspace = true }
crossbeam = { workspace = true }
subtle-encoding = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
