[package]
name = "sphinx-recursion-gnark-ffi"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-field = { workspace = true }
p3-baby-bear = { workspace = true }
sphinx-recursion-compiler = { path = "../compiler" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
num-bigint = { workspace = true }
cfg-if = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }
cfg-if = { workspace = true }

[features]
plonk = []
