[package]
name = "wp1-recursion-program"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
wp1-recursion-core = { path = "../core" }
wp1-recursion-compiler = { path = "../compiler" }
wp1-core = { path = "../../core" }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "fri_sweep"
path = "experiments/fri_sweep.rs"
