[package]
name = "sphinx-recursion-program"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-matrix = { workspace = true }
p3-maybe-rayon = { workspace = true }
p3-util = { workspace = true }
p3-symmetric = { workspace = true }
p3-challenger = { workspace = true }
p3-baby-bear = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
sphinx-recursion-core = { path = "../core" }
sphinx-recursion-compiler = { path = "../compiler" }
sphinx-core = { path = "../../core" }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
tracing = { workspace = true }
