[package]
name = "sphinx-zkvm"
version = "1.0.0-rc.1"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sphinx-precompiles = { path = "../precompiles" }
sphinx-primitives = { path = "../../primitives", optional = true }
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }
bincode = { workspace = true }
cfg-if = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
k256 = { workspace = true, features = ["ecdsa", "std", "bits"] }
once_cell = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

[features]
default = []
verify = ["dep:sphinx-primitives", "dep:p3-baby-bear", "dep:p3-field", "sphinx-precompiles/verify"]


[package.metadata.cargo-udeps.ignore] # used w/ verify feature & some examples
normal = [
    "p3-baby-bear",
    "p3-field",
    "sphinx-primitives",
    "rand"
]