[package]
name = "sphinx-zkvm"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
sphinx-precompiles = { path = "../lib" }
bincode = { workspace = true }
cfg-if = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
libm = { workspace = true, optional = true }
k256 = { workspace = true, features = ["ecdsa", "std", "bits"] }
lazy_static = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
# Not using the workspace dependency or a patch here to ensure that downstream users always use the patched crate
sha2 = { version = "0.10.8", git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }

# verify
sphinx-primitives = { path = "../../primitives" }
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }

[features]
default = ["libm"]
libm = ["dep:libm"]
verify = ["dep:p3-baby-bear", "dep:p3-field", "sphinx-precompiles/verify"]
bn254 = ["sphinx-precompiles/bn254"]
secp256k1 = ["sphinx-precompiles/secp256k1"]

[package.metadata.cargo-udeps.ignore] # used w/ verify feature & some examples
normal = [
    "p3-baby-bear",
    "p3-field",
    "sphinx-primitives",
    "rand"
]

