[package]
name = "sphinx-zkvm"
version = "1.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bincode = { workspace = true }
cfg-if = { workspace = true }
getrandom = { version = "0.2.14", features = ["custom"] }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
libm = { workspace = true, optional = true }
sha2 = { workspace = true }
lazy_static = { workspace = true }

# optional
sphinx-lib = { workspace = true, optional = true }
sphinx-primitives = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }

[features]
default = ["libm", "lib"]
libm = ["dep:libm"]
lib = ["dep:sphinx-lib"]
verify = [
  "dep:sphinx-primitives",
  "dep:p3-baby-bear",
  "dep:p3-field",
  "sphinx-lib/verify",
]

