[package]
name = "sphinx-precompiles"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bls12_381 = { workspace = true }
cfg-if = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
hybrid-array = { workspace = true }
k256 = { workspace = true, features = ["ecdsa", "std", "bits"] }
serde = { workspace = true, features = ["derive"] }

[features]
verify = []
