[workspace]
[package]
version = "0.1.0"
name = "fibonacci-script"
edition = "2021"
default-run = "fibonacci-script"

[dependencies]
bincode = "1.3.3"
sphinx-sdk = { path = "../../../sdk" }

[build-dependencies]
sphinx-helper = { path = "../../../helper" }

[[bin]]
name = "groth16"
path = "bin/groth16.rs"

[[bin]]
name = "compressed"
path = "bin/compressed.rs"

[[bin]]
name = "execute"
path = "bin/execute.rs"

[[bin]]
name = "fibonacci-script"
path = "src/main.rs"