[package]
name = "lcs-script"
version = "0.1.0"
edition = "2021"
default-run = "lcs-script"
publish = false

[dependencies]
itertools = "0.12.1"
sphinx-sdk = { path = "../../../sdk" }
sha2 = "0.10.8"

[build-dependencies]
sphinx-helper = { path = "../../../helper" }

[[bin]]
name = "lcs-script"
path = "src/main.rs"
